# gremlin

./: GN_headers.cmake  GN_misc.cmake  GN_private.cmake  GN_projects.cmake  GN_tests.cmake  GN_unity_build.cmake  LICENSE  README.md  TODO  gremlin.cmake  gremlin.todo  gremlin_v3.cmake
example/: 1_configure.bat  2_runVS.bat  CmakeLists.txt
example/exec/: CMakeLists.txt  main.cpp
gremlin/: common.cmake  logger.cmake  plugins.cmake  stub.cmake  stub.cpp  unit.cmake
gremlin_v3/: target.link_binary.cmake  target.project_tree.cmake  target.tests.cmake  utils.globals.cmake
gremlin_v3/target.tests/: gbench.cmake  gtest.cmake
internal/: enviroment.cmake  helpers.cmake  log.cmake  modules.cmake  unit.cmake
loaders/: GN_loader_cotire.cmake  GN_loader_gtest.cmake
modules/: guards.onConf.cmake  guards.onGen.cmake  test.cmake  test.onConf.cmake  test.onGen.cmake  test.onSetup.cmake  vcpkg.cmake  vcpkg.onInit.cmake
modules/cotire/: module.cmake  onConf.cmake  onGen.cmake
modules/flags/: module.cmake  onConf.cmake  onGen.cmake
modules/guards/: module.cmake  onConf.cmake  onGen.cmake
modules/test/: module.cmake  onConf.cmake  onDone.cmake  onSetup.cmake
modules/vcpkg/: module.cmake  onConf.cmake  onInit.cmake  toolchain.cmake
plugins/definitions/: events.cmake  plugin.cmake
plugins/flags/: events.cmake  plugin.cmake
plugins/gtest/: events.cmake  plugin.cmake
plugins/gtest/project/: CMakeLists.txt
plugins/guards/: events.cmake  plugin.cmake
plugins/libraries/: events.cmake  plugin.cmake
plugins/output/: events.cmake  (+1 more)
unit_test/: CMakeLists.txt
(+24 files in other folders)
